// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrayProperty /> renders maxItems 1`] = `
<span>
  <span
    className="array-constraints"
  >
    at most 10 items
  </span>
</span>
`;

exports[`<ArrayProperty /> renders minItems 1`] = `
<span>
  <span
    className="array-constraints"
  >
    at least 2 items
  </span>
</span>
`;

exports[`<ArrayProperty /> renders minItems and maxItems 1`] = `
<span>
  <span
    className="array-constraints"
  >
    4-10 items
  </span>
</span>
`;

exports[`<ArrayProperty /> renders minItems and maxItems when they are the same value 1`] = `
<span>
  <span
    className="array-constraints"
  >
    4 items
  </span>
</span>
`;

exports[`<ArrayProperty /> renders uniqueItems 1`] = `
<span>
  <span
    className="array-constraints"
  >
    items must be unique
  </span>
</span>
`;

exports[`<ArrayProperty /> renders uniqueItems, minItems and maxItems 1`] = `
<span>
  <span
    className="array-constraints"
  >
    items must be unique
  </span>
  <span
    className="array-constraints"
  >
    4-10 items
  </span>
</span>
`;
